--- a/app.json
+++ b/app.json
@@ -66,7 +66,7 @@
     },
     "UPSTREAM_REPO": {
       "description": "لا تغيـرها ابدا",
-      "value": "jmthonar",
+      "value": "LINDA",
       "required": false
     }
   },
